# Latticeum

./: .gitignore  README.md
.obsidian/: workspace.json
1/dp1/: A Simple Introduction to Folding Schemes.md  Halo2.md  LatticeFold Presentation.md  Understanding Nova.md
1/dp1/.obsidian/: appearance.json  workspace.json
dp0/: assignment.md
dp1/: .obsidian.vimrc  Do not trust anybody.md  Folding Schemes.md  HyperNova.md  Lattice based crypto.md  LatticeFold Presentation.md  MLE - Multi-linear extension.md  Nova.md  Proof systems.md  Spartan.md  bibliography.bib  initialize.tex
dp1/.obsidian/: workspace.json
dp1/content/: introduction.tex
dp1/content/analysis/: zkevm.tex
dp1/doc/: bibliography.bib  main.tex  packages.tex  values.tex
dp1/doc/content/analysis/: analysis.tex  ethereum.tex  lattices.tex  snarkification.tex  zkevm.tex
dp1/doc/pages/: abbreviations.tex  annotation.tex
dp1/notes/: Spartan.md  Understanding Folding.md
dp1/pages/: time_schedule.tex
dp1/templates/: header.tex
dp2/: bibliography.bib  initialize.tex  main.tex  packages.tex  values.tex
dp2/content/: evaluation.tex  fw_and_conslussion.tex  introduction.tex  problem_statement.tex
dp2/content/analysis/: analysis.tex  ethereum.tex  lattices.tex  snarkification.tex  zkevm.tex
dp2/content/implementation/: crypto.tex  implementation.tex
dp2/content/solution/: crypto-primitives.tex  high-level-arch.tex  ivc.tex  riscv-circuit.tex  solution.tex
dp2/pages/: abbreviations.tex
dp3/: NOTES.md  bibliography.bib  initialize.tex  main.tex  packages.tex  values.tex
dp3/content/: evaluation.tex  fw_and_conslussion.tex  introduction.tex  problem_statement.tex
dp3/content/analysis/: analysis.tex  ethereum.tex  lattices.tex  snarkification.tex  zkevm.tex
dp3/content/implementation/: ccs.tex  crypto.tex  implementation.tex  optimizations.tex  riscv-emul.tex  tech-stack.tex
dp3/content/solution/: crypto-primitives.tex  high-level-arch.tex  ivc.tex  riscv-circuit.tex  solution.tex  wrapping-snark.tex
dp3/pages/: abbreviations.tex  acknowledgements.tex  ai_usage.tex  annotation.tex  declaration.tex  digital_medium.tex  resume.tex  setup_guide.tex  tech_doc.tex  time_schedule.tex  titlepage.tex
dp3/templates/: header.tex
ethres/: extended_abstract.tex
latticeum/: Cargo.toml  mise.toml  playground.sage  rust-toolchain.toml  specification.md
latticeum/crates/configuration/src/: lib.rs
latticeum/crates/cyclotomic-rings/src/: rotation.rs
latticeum/crates/guest/: Cargo.toml
latticeum/crates/guest/.cargo/: config.toml
latticeum/crates/guest/src/: lib.rs
latticeum/crates/latticefold/src/nifs/: decomposition.rs  folding.rs  linearization.rs
latticeum/crates/latticefold/src/nifs/folding/: utils.rs
latticeum/crates/latticefold/src/nifs/linearization/: utils.rs
latticeum/crates/latticefold/src/transcript/: poseidon.rs
latticeum/crates/latticefold/src/utils/: sumcheck.rs
latticeum/crates/latticefold/src/utils/sumcheck/: prover.rs  utils.rs  verifier.rs
latticeum/crates/stark-rings/crates/linear_algebra/: Cargo.toml
latticeum/crates/stark-rings/crates/poly/: Cargo.toml
latticeum/crates/stark-rings/crates/poly/benches/: fix_variables.rs
latticeum/crates/stark-rings/crates/ring/: Cargo.toml
latticeum/crates/stark-rings/crates/ring/src/: monomial.rs  poly_ring.rs  ring.rs
latticeum/crates/stark-rings/crates/ring/src/cyclotomic_ring/: coeff_form.rs  ntt_form.rs
latticeum/crates/stark-rings/crates/ring/src/cyclotomic_ring/models/babybear/: mod.rs  ntt.rs
latticeum/crates/stark-rings/crates/ring/src/cyclotomic_ring/models/frog_ring/: mod.rs  ntt.rs
latticeum/crates/stark-rings/crates/ring/src/cyclotomic_ring/models/goldilocks/: mod.rs  ntt.rs
latticeum/crates/stark-rings/crates/ring/src/cyclotomic_ring/models/stark_prime/: mod.rs
latticeum/crates/vm/: Cargo.toml
latticeum/crates/vm/samples/: fibonacci  fibonacci_100_000
latticeum/crates/vm/src/: lib.rs
latticeum/crates/vm/src/riscvm/: consts.rs  elf.rs  inst.rs  inst_decoder.rs  instruction.rs  mod.rs  opcode.rs  reg.rs  vm.rs
latticeum/crates/zkvm/: Cargo.toml
latticeum/crates/zkvm/src/: ccs.rs  commitments.rs  constraints.rs  crypto_consts.rs  fiat_shamir.rs  ivc.rs  main.rs  memory_commitment.rs  poseidon2.rs  witness.rs  zk_latticefold.rs
latticeum/guests/evm/: Cargo.toml  account_snapshot_parent.json  block_24740084_witness.json  block_hashes_parent_window.json  collect_block_witness.py  generate_hardcoded_main.py  storage_snapshot_parent.json
latticeum/guests/evm/src/: main.rs
latticeum/guests/fibonacci/: Cargo.toml
latticeum/guests/fibonacci/src/: main.rs
latticeum/sages/: derive_initial_mds_vars.sage  external_initial_rounds.sage  initial_mds.sage  internal_inverse_m.sage  inverse_mds.sage
notes/: CCS.md  HyperNova.md  LatticeFold.md  MLE - Multi-linear extension.md  Proof systems.md  Understanding Folding.md
research-objectives/: bibliography.bib  build.sh  goals.md  main.tex  packages.tex  values.tex
research-objectives/content/: analysis.tex  introduction.tex  motivation.tex  research-objective.tex
