[workspace]
resolver = "3"
members = [
	"crates/configuration",
	"crates/guest",
	"crates/vm",
	"crates/zkvm",
	"guests/fibonacci",
]

[workspace.dependencies]
vm = { path = "./crates/vm" }
configuration = { path = "./crates/configuration" }

elf = "0.8.0"
riscv-isa = "0.3.1"
thiserror = "2.0.12"

tracing = "0.1.41"
tracing-subscriber = "0.3.18"
test-log = { version = "0.2.18", features = ["trace"] }

num-traits = "0.2"
rand = { version = "0.9.2" }

latticefold = { git = "https://github.com/NethermindEth/latticefold.git", branch = "main" }
cyclotomic-rings = { git = "https://github.com/NethermindEth/latticefold.git", branch = "main" }
stark-rings = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
stark-rings-linalg = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }
stark-rings-poly = { git = "https://github.com/NethermindEth/stark-rings.git", branch = "main", default-features = false }

p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }

ark-std = "0.4.0"
ark-ff = "0.4.2"
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [ "sponge" ] }

[profile.profiling]
inherits = "release"
debug = true
