[workspace]
resolver = "3"
members = [
	"crates/configuration",
	"crates/guest",
	"crates/vm",
    "crates/cyclotomic-rings",
    "crates/latticefold",
	"crates/stark-rings/crates/ring",
	"crates/stark-rings/crates/linear_algebra",
	"crates/stark-rings/crates/poly",
	"crates/zkvm",

	"guests/fibonacci",
]

[workspace.package]
authors = ["Nesquiko"]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
vm = { path = "./crates/vm" }
configuration = { path = "./crates/configuration" }

elf = "0.8.0"
riscv-isa = "0.3.1"
thiserror = "2.0.12"

tracing = "0.1.41"
tracing-subscriber = "0.3.18"
test-log = { version = "0.2.18", features = ["trace"] }

num-traits = "0.2"
rand = { version = "0.8.5", default-features = false }

latticefold = { path = "crates/latticefold", default-features = false }
cyclotomic-rings = { path = "crates/cyclotomic-rings", default-features = false }

stark-rings = { path = "crates/stark-rings/crates/ring", default-features = false }
stark-rings-linalg = { path = "crates/stark-rings/crates/linear_algebra", default-features = false }
stark-rings-poly = { path = "crates/stark-rings/crates/poly", default-features = false }

num-bigint = { version = "0.4.5", default-features = false }
rayon = "1.10.0"
criterion = "0.5.1"
proc-macro2 = "1.0.92"
quote = "1.0.37"
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
clap = { version = "4.6.0", features = ["derive"] }

p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-mds = { git = "https://github.com/Plonky3/Plonky3.git" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git" }

ark-std = { version = "0.5.0", default-features = false }
ark-ff = "0.5.0"
ark-poly = "0.5"
ark-crypto-primitives = { version = "0.5.0", default-features = false, features = [ "sponge" ] }
ark-serialize = { version = "0.5.0", features = ["derive"] }
 
delegate = "0.13"
derive_more = "0.99"
displaydoc = { version = "0.2", default-features = false }
hashbrown = "0.15"
num-integer = { version = "0.1", default-features = false }
serde_with = { version = "3.7", default-features = false }
syn = "2.0.87"
zeroize = "1.7"

[profile.profiling]
inherits = "release"
debug = true
