[package]
name = "zkvm"
version = "0.1.0"
edition = "2024"

[dependencies]
configuration = { workspace = true }
vm = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
test-log = { workspace = true }

num-traits = { workspace = true }
latticefold = { workspace = true }
cyclotomic-rings = { workspace = true }
stark-rings = { workspace = true }
stark-rings-poly = { workspace = true }
stark-rings-linalg = { workspace = true }
ark-std = { workspace = true }
ark-ff = { workspace = true }
ark-crypto-primitives = { workspace = true }

p3-poseidon2 = { workspace = true }
p3-goldilocks = { workspace = true }
p3-symmetric = { workspace = true }
p3-field = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-matrix = { workspace = true }
p3-commit = { workspace = true }
p3-mds = { workspace = true }
p3-challenger = { workspace = true }

rand = { workspace = true }

[features]
debug = []
