[package]
name = "evm"
version = "0.1.0"
edition = "2024"

[dependencies]
revm = { version = "36.0.0", default-features = false, features = ["std", "secp256k1", "c-kzg"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.12.1", features = ["json"] }

[target.'cfg(target_arch = "riscv32")'.dependencies]
guest = { path = "../../crates/guest" }

[[bin]]
name = "evm"
path = "src/main.rs"
test = false
bench = false
