[package]
name = "stark-rings-linalg"
authors = ["Christian Knabenhans", "Nethermind"]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.0.1-alpha"

[features]
default = ["std"]
std = ["ark-std/std", "rand/std"]
parallel = ["std", "rayon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
delegate = { workspace = true }
derive_more = { workspace = true }
num-integer = { workspace = true }
rand = { workspace = true }

rayon = { workspace = true, optional = true }
serde = { workspace = true }
thiserror = { workspace = true }
