[package]
name = "stark-rings-poly"
authors = ["Christian Knabenhans", "Nethermind"]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.0.1-alpha"

[features]
default = ["std"]
std = ["stark-rings-linalg/std"]
parallel = ["std", "rayon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
displaydoc = { workspace = true }
hashbrown = "0.15"
rand = { workspace = true }
rayon = { workspace = true, optional = true }
stark-rings = { workspace = true }
stark-rings-linalg = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "fix_variables"
harness = false
