[package]
name = "stark-rings"
authors = ["Christian Knabenhans", "Nethermind"]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.0.1-alpha"

[features]
default = ["std"]
std = ["stark-rings-linalg/std"]
parallel = ["std", "rayon", "stark-rings-linalg/parallel"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-crypto-primitives = { workspace = true, default-features = false, features = [
    "sponge",
] }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
delegate = { workspace = true }
derive_more = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
num-traits = { version = "0.2", default-features = false }
rand = { workspace = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true }
serde_with = { workspace = true }
stark-rings-linalg = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
rand_chacha = { version = "0.3.1", default-features = false }
